--- a/public/css/style.css
+++ b/public/css/style.css
@@ -518,6 +518,7 @@ body {
 .hero-banner {
   position: relative;
   margin-block-start: 50px;
+  color: var(--bg-oxford-blue-beta-80);
 }
 
 .hero-banner-bg {
@@ -3148,6 +3149,17 @@ header h2 {
     font-size: 1.5rem;
   }
 
+
+
+
+
+  /*-----------------------------------*\
+  #TESTIMONIALS
+\*-----------------------------------*/
+
+  .testimonials {
+    display: none;
+  }
 
 }
 
