--- a/views/createProject.pug
+++ b/views/createProject.pug
@@ -5,7 +5,7 @@ block content
     section#new-project
       h2 Create New Project 
 
-      form.new-content-form#createProject
+      form.new-content-form#createProject(method="POST" enctype="multipart/form-data")
         .post-group
           label(for="new-project-title") Title
           input#new-project-title(type="text" name="title" required autofocus)
@@ -16,11 +16,11 @@ block content
 
         .post-group
           label(for="live-url") Live URL:
-          input(type="url" id="live-url" name="live-url")
+          input(type="url" id="live-url" name="liveUrl")
 
         .post-group
           label(for="github-url") GitHub URL:
-          input(type="url" id="github-url" name="github-url")
+          input(type="url" id="github-url" name="githubUrl")
 
         .checkboxes
           fieldset
@@ -54,12 +54,12 @@ block content
           .post-desktop
             label(for="desktop-img" aria-label="upload image") Desktop View
               img#desktop-img-view(src="/img/svg/cloud-upload.svg" alt="")
-            input#desktop-img(type="file" name="photo" required)
+            input#desktop-img(type="file" name="desktopImg" required)
 
           .post-mobile 
             label(for="mobile-img" aria-label="upload image") Mobile View
               img#mobile-img-view(src="/img/svg/cloud-upload.svg" alt="")
-            input#mobile-img(type="file" name="photo" required)
+            input#mobile-img(type="file" name="mobileImg" required)
 
         .post-group
           button(type="submit") Submit
