--- a/views/clients-base.pug
+++ b/views/clients-base.pug
@@ -6,9 +6,9 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
 
     //- Primary meta tags
-    title My Portfolio  | #{title}
-    meta(name="title" content="Unigine - Epic Games Made For True Gamers!")
-    meta(name="description" content="This is an esports and gaming html template made by codewithsadee")
+    title Dev Memoirs  | #{title}
+    meta(name="title" content="Dev Memoirs!")
+    meta(name="description" content="This is an where I will be sharing my works")
 
     link(rel="shortcut icon" href="/img/favicon.svg" type="image/svg+xml")
 
@@ -31,7 +31,7 @@ html(lang="en")
 
     //- CONTENT
     block content
-      h1 This is a placeholder text
+      h1 This is a placeholder text on Dev Memoirs
 
     //- FOOTER
     include _footer
