--- a/views/forgetPassword.pug
+++ b/views/forgetPassword.pug
@@ -5,13 +5,14 @@ block content
     #admin-row
       .container--1
         h1 Forgot Password
-        form.form-group
+        form.form-group(id="forgotPasswordForm")
           .forget-pass
             label(for="email") Email Address
-            input#email(type="email" placeholder="Enter your email address")
+            input#email(type="email" name="email" placeholder="Enter your email address" required)
           .forget-pass
-            button Reset Password
+            button(type="submit") Reset Password
 
           p.goIn
             | Don't have an account?
             a(href='/signup') Sign up
+
