--- a/views/login.pug
+++ b/views/login.pug
@@ -8,9 +8,7 @@ block content
         form.login-pass
           input(type="password" id="pass" maxlength='6' required)
 
-
-
-      section(id="getIn")
+      section.log-pass(id="getIn")
         div(id="getIn-inner")
           form(class="new-content-form" id='form--login')
             h2 Log in
