--- a/views/_aside.pug
+++ b/views/_aside.pug
@@ -29,7 +29,7 @@ aside.sidebar
         i(class="fas fa-file-alt")
         |  Posts
     li
-      a(href="/admin/profile")
+      a(href="/profile")
         i(class="fas fa-user-circle")
         |  Profile
     li
