--- a/views/admin-base.pug
+++ b/views/admin-base.pug
@@ -6,7 +6,7 @@ html
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css")
     link(rel="stylesheet" href="/css/style.css")
     link(rel="shortcut icon" href="/img/favicon.svg" type="image/svg+xml")
-    title My Portfolio  | #{title}
+    title Dev Memoirs  | #{title}
 
   body#admin-body
     //- ASIdE
