--- a/views/_header.pug
+++ b/views/_header.pug
@@ -12,7 +12,7 @@ header.header.active(data-header)
         li.navbar-item
           a.navbar-link(href="/projects") My Works
         li.navbar-item
-          a.navbar-link(href="/") Resume
+          a.navbar-link(href="/market-place") Market place
         li.navbar-item
           a.navbar-link(href="/blog") Blog
 
