--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1790,6 +1790,98 @@ button.buy:hover {
   cursor: pointer;
 }
 
+
+
+
+.verify-to-download-form {
+  position: absolute;
+  inset: 0 0 0 0;
+  background: #0000006b;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+}
+
+.verify-to-download-form.view-active {
+  display: flex;
+  opacity: 1;
+}
+
+.access-download {
+  position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 400px;
+  background: var(--bg-oxford-blue-alpha-90);
+  border-radius: 12px;
+  padding: 20px;
+}
+
+.access-download #otp-close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 2.5rem;
+  color: var(--text-white);
+  transform: scaleX(1.5);
+  cursor: pointer;
+}
+
+.access-download .title {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: var(--text-white)
+}
+
+.access-download .message {
+  color: #a3a3a3;
+  font-size: 14px;
+  margin-top: 4px;
+  text-align: center
+}
+
+.access-download .inputs {
+  margin-top: 10px;
+  display: flex;
+}
+
+.access-download .inputs input {
+  width: 32px;
+  height: 32px;
+  text-align: center;
+  border: none;
+  border-bottom: 1.5px solid #d2d2d2;
+  color: var(--text-white);
+  margin: 0 10px;
+}
+
+.access-download .inputs input:focus {
+  border-bottom: 1.5px solid royalblue;
+  outline: none;
+}
+
+.access-download .action {
+  margin-top: 24px;
+  padding: 12px 16px;
+  border-radius: 8px;
+  border: none;
+  background-color: royalblue;
+  color: var(--text-white);
+  cursor: pointer;
+  align-self: end;
+}
+
+
+
+
+
+
+
+
+
 /* ======== ITEM REVIEWS =========== */
 .review {
   display: flex;
