--- a/views/clients-base.pug
+++ b/views/clients-base.pug
@@ -31,15 +31,13 @@ html(lang="en")
 
     //- CONTENT
     block content
-      h1 This is a placeholder text on Dev Memoirs
 
     //- FOOTER
     include _footer
 
 
     //- BACK TO TOP
-    a.back-top-btn(href="#top" aria-label="back to top" data-back-top-btn)
-      ion-icon(name="arrow-up-outline" aria-hidden="true")
+    a.back-top-btn(href="#top" aria-label="back to top" data-back-top-btn) &uarr;
 
 
     //- CUSTOM CURSOR
@@ -49,7 +47,3 @@ html(lang="en")
     //- Custom JS link
     script(src='/js/bundle.js')
     script(src='/js/script.js')
-
-    //- Ionicon link
-    script(type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js")
-    script(nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js")
