--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1348,7 +1348,53 @@ aside#related-posts {
 
 
 
+/*-----------------------------------*\
+  #recent-post
+\*-----------------------------------*/
+.recent-post-container {
+  margin: 20px 0;
+}
 
+.recent-post-container h2 {
+  font-size: 2rem;
+  margin-bottom: 20px;
+}
+
+.recent-post {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 30px;
+}
+
+.recent-post-inner {
+  padding: 10px;
+  height: 200px;
+  border-radius: 4px;
+  overflow: hidden;
+  position: relative;
+  box-shadow: var(--shadow);
+  transition: var(--transition-1);
+  border: 5px solid var(--border-purple-alpha-30);
+}
+
+.recent-post-inner img {
+  width: 100%;
+  height: 100%;
+}
+
+.recent-post-title {
+  font-size: 1.75rem;
+  margin-bottom: 10px;
+  position: absolute;
+  bottom: -100px;
+  width: 100%;
+  padding: 10px;
+  background: var(--bg-oxford-blue-beta-80);
+}
+
+.recent-post-inner:hover .recent-post-title {
+  bottom: 0;
+}
 
 
 
@@ -1390,6 +1436,7 @@ aside#related-posts {
 
 #comment-form textarea {
   height: 150px;
+  font-size: var(--fontSize-6);
 }
 
 #comment-form input:focus,
@@ -1470,6 +1517,7 @@ aside#related-posts {
 }
 
 .comment-img {
+  align-self: flex-start;
   display: grid;
   place-items: center;
   font-size: 3rem;
@@ -1483,7 +1531,7 @@ aside#related-posts {
 
 .comment-card:hover>.comment-img {
   transition: all 0.3s ease-in-out;
-  background: linear-gradient(#9198e5, #712020);
+  background: var(--gradient-1);
 }
 
 .textBox {
@@ -1530,8 +1578,9 @@ aside#related-posts {
   font-size: 1.8rem;
   font-weight: 400;
   text-align: center;
-  border-bottom-left-radius: 5px;
-  border-bottom-right-radius: 5px;
+  border: 2px solid var(--border-space-cadet);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
   padding: 1.6rem 15rem;
   -webkit-box-shadow: 0 2rem 4rem #00000040;
   box-shadow: 0 2rem 4rem #00000040;
@@ -1539,12 +1588,12 @@ aside#related-posts {
 }
 
 .alert--success {
-  background-color: #20bf6b;
+  background: var(--gradient-2);
   top: 0;
 }
 
 .alert--error {
-  background-color: #eb4d4b;
+  background: var(--gradient-3);
   top: 0;
 }
 
@@ -1556,7 +1605,7 @@ aside#related-posts {
   bottom: 10px;
   left: 0;
   height: 50px;
-  background-image: var(--gradient-1);
+  background: var(--gradient-1);
   display: grid;
   place-items: center;
   font-size: 2.1rem;
@@ -2611,8 +2660,14 @@ button.buy:hover {
   margin-top: 15px;
 }
 
+#admin-body .post-group fieldset {
+  margin-bottom: 20px;
+}
 #admin-body .post-group .elements {
   display: grid;
+  padding: 20px;
+  border-radius: 10px;
+  background: var(--bg-oxford-blue-beta-80);
   grid-template-columns: repeat(auto-fit, minmax(25px, 1fr));
 }
 
@@ -3701,11 +3756,13 @@ header h2 {
 /* #new-project .checkboxes * {
   border: 2px solid red;
 } */
+#new-posts .post-group fieldset,
 #new-project .checkboxes fieldset {
   padding: 20px;
   width: 100%;
 }
 
+#new-posts .post-group fieldset legend,
 #new-project .checkboxes fieldset legend {
   padding: 10px;
   font-size: 2.5rem;
@@ -3745,14 +3802,21 @@ header h2 {
   gap: 20px;
 }
 
-#new-project .select-img input {
-  display: none;
+#new-project .select-img .cover-img {
+  margin-top: 10px;
+  width: 100%;
+  height: 300px;
+  border: 2px solid var(--text-white);
+  border-radius: 10px;
+  padding: 10px;
+  overflow: hidden;
 }
 
-#new-project .select-img img {
-  margin-top: 10px;
-  max-width: 400px;
-  height: 250px;
+#new-project .select-img .cover-img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  fill: var(--text-white);
 }
 
 
