--- a/views/createProject.pug
+++ b/views/createProject.pug
@@ -5,61 +5,65 @@ block content
     section#new-project
       h2 Create New Project 
 
-      form.new-content-form#createProject(method="POST" enctype="multipart/form-data")
+      form.new-content-form#createProject
         .post-group
           label(for="new-project-title") Title
-          input#new-project-title(type="text" name="title" required autofocus)
+          input#new-project-title(type="text", name="title", required, autofocus)
 
         .post-group
           label(for="description") Description:
-          textarea#description(name="description" required)
+          textarea#description(name="description", required)
 
         .post-group
           label(for="live-url") Live URL:
-          input(type="url" id="live-url" name="liveUrl")
+          input(type="url", id="live-url", name="liveUrl")
 
         .post-group
           label(for="github-url") GitHub URL:
-          input(type="url" id="github-url" name="githubUrl")
+          input(type="url", id="github-url", name="githubUrl")
 
         .checkboxes
           fieldset
             legend Technologies:
             .checkbox-inner
               label.switch(for="html") HTML
-                input#html(type="checkbox" name="technologies" value="html")
+                input#html(type="checkbox", name="technologies", value="html")
               
               label.switch(for="css") CSS
-                input#css(type="checkbox" name="technologies" value="css")
+                input#css(type="checkbox", name="technologies", value="css")
 
               label.switch(for="jquery") JQuery 
-                input#jquery(type="checkbox" name="technologies" value="jquery")
+                input#jquery(type="checkbox", name="technologies", value="jquery")
 
               label.switch(for="php") PHP 
-                input#php(type="checkbox" name="technologies" value="php")
+                input#php(type="checkbox", name="technologies", value="php")
 
               label.switch(for="express") Express
-                input#express(type="checkbox" name="technologies" value="express")
+                input#express(type="checkbox", name="technologies", value="express")
 
               label.switch(for="react") React JS 
-                input#react(type="checkbox" name="technologies" value="react")
+                input#react(type="checkbox", name="technologies", value="react")
 
               label.switch(for="javascript") JavaScript 
-                input#javascript(type="checkbox" name="technologies" value="javascript")
+                input#javascript(type="checkbox", name="technologies", value="javascript")
 
               label.switch(for="node") Node JS 
-                input#node(type="checkbox" name="technologies" value="node")
+                input#node(type="checkbox", name="technologies", value="node")
 
         .select-img
           .post-desktop
-            label(for="desktop-img" aria-label="upload image") Desktop View
-              img#desktop-img-view(src="/img/svg/cloud-upload.svg" alt="")
-            input#desktop-img(type="file" name="desktopImg" required)
+            label(for="desktop-img", aria-label="upload image") Desktop View
+            br
+            input#desktop-img(type="file", name="desktopImg", required)
+            .cover-img
+              img#desktop-img-view(src="/img/svg/upload.svg", alt="")
 
           .post-mobile 
-            label(for="mobile-img" aria-label="upload image") Mobile View
-              img#mobile-img-view(src="/img/svg/cloud-upload.svg" alt="")
-            input#mobile-img(type="file" name="mobileImg" required)
+            label(for="mobile-img", aria-label="upload image") Mobile View
+            br
+            input#mobile-img(type="file", name="mobileImg", required)
+            .cover-img
+              img#mobile-img-view(src="/img/svg/upload.svg", alt="")
 
         .post-group
           button(type="submit") Submit
