--- a/views/editPost.pug
+++ b/views/editPost.pug
@@ -3,28 +3,30 @@ extends admin-base
 block content
   main.admin-main
     section#new-posts
-      h2 #{post ? 'Edit Post' : 'Create New Post'}
+      h2 Edit Post
 
-      form.new-content-form#editPost(data-post-id=post ? post._id : '')
+      form.new-content-form#editPo-st(data-post-id=post ? post._id : '')
         .post-group
           label(for="new-post-title") Title
           input#new-post-title(type="text" name="title" required autofocus value=post ? post.title : '')
 
         .post-group
-          ul.elements
-            li: button(type="button" data-element="h1") h1
-            li: button(type="button" data-element="h2") h2
-            li: button(type="button" data-element="h3") h3
-            li: button(type="button" data-element="h4") h4
-            li: button(type="button" data-element="h5") h5
-            li: button(type="button" data-element="h6") h6
-            li: button(type="button" data-element="ul") ul
-            li: button(type="button" data-element="li") li
-            li: button(type="button" data-element="p") p
-            li: button(type="button" data-element="a") a
-            li: button(type="button" data-element="code") code
-            li: button(type="button" data-element="pre") pre
-            li: button(type="button" data-element="img") img
+          fieldset
+            legend Elements:
+            ul.elements
+              li: button(type="button" data-element="h1") h1
+              li: button(type="button" data-element="h2") h2
+              li: button(type="button" data-element="h3") h3
+              li: button(type="button" data-element="h4") h4
+              li: button(type="button" data-element="h5") h5
+              li: button(type="button" data-element="h6") h6
+              li: button(type="button" data-element="ul") ul
+              li: button(type="button" data-element="li") li
+              li: button(type="button" data-element="p") p
+              li: button(type="button" data-element="a") a
+              li: button(type="button" data-element="code") code
+              li: button(type="button" data-element="pre") pre
+              li: button(type="button" data-element="img") img
 
           label(for="new-post-content") Content
           textarea#new-post-content(name="content" required)= post ? post.content : '' 
@@ -52,3 +54,5 @@ block content
 
         .post-group
           button(type="submit") Submit
+
+  //- script( src='/js/test.js')
