--- a/views/myWork.pug
+++ b/views/myWork.pug
@@ -26,7 +26,7 @@ block content
                 td.actions
                   span.fas.fa-ellipsis-v
                   .actions-inner
-                    a.warning(href="") Edit
+                    a.warning(href=`/projects/edit/${project._id}`) Edit
                     button(type="button" class="delete-btn danger" data-id=project._id data-type="projects") Delete
       else 
         .empty-message No project found.
